--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Base application theme. -->
+    <style name="Base.Theme.ClipboardShared" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
 
-    <style name="Theme.ClipboardShared" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.ClipboardShared" parent="Base.Theme.ClipboardShared" />
+
+    <!-- CustomShapeAppearanceLargeComponent -->
+    <style name="CustomInputLayoutShapeAppearance" parent="@style/ShapeAppearance.MaterialComponents.LargeComponent">
+        <item name="cornerSize">10dp</item>
+    </style>
 </resources>
